# src/db/schema/links.ts
@@ -17,6 +17,9 @@ export const links = sqliteTable(
     type: text('type'),
     isDefault: integer('is_default', { mode: 'boolean' }).notNull().default(false),
     hreflang: text('hreflang', { mode: 'json' }).$type<string[] | null>(),
+    method: text('method', { mode: 'json' }).$type<string[] | null>(),
+    encryptionMethod: text('encryption_method'),
+    accessRole: text('access_role'),
     tenantId: text('tenant_id').notNull(),
     organizationId: text('organization_id').notNull(),
     userId: text('user_id'),
